--- a/rules/cloudflare_bad_client_ip.yml
+++ b/rules/cloudflare_bad_client_ip.yml
@@ -6,7 +6,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:cloudflare
+  %ingest.source_type:"cloudflare:http"
   ClientIPClass:(unknown badHost greylist securityScanner scan tor)
   | groupbycount(ClientIP)
   | where @q.count > 0
