--- a/rules/cloudflare_xss_probing_pattern.yml
+++ b/rules/cloudflare_xss_probing_pattern.yml
@@ -6,7 +6,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:cloudflare
+  %ingest.source_type:"cloudflare:http"
   ClientRequestMethod:(POST PUT)
   ClientRequestURI:('alert(' 'alert%28' 'String.fromCharCode(' 'expression(alert')
   | groupbycount(ClientIP)
