Use `@scnr.source_type` instead of `%ingest.source_type`

--- a/rules/cloudflare_empty_user_agent.yml
+++ b/rules/cloudflare_empty_user_agent.yml
@@ -6,7 +6,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:cloudflare
+  @scnr.source_type:cloudflare
   (ClientRequestUserAgent:"" or not ClientRequestUserAgent:*)
 time_range_s: 300
 run_frequency_s: 60
