--- a/rules/cloudflare_bot_requests.yml
+++ b/rules/cloudflare_bot_requests.yml
@@ -13,7 +13,7 @@ description: |-
 enabled: true
 severity: Low
 query_text: |-
-  %ingest.source_type:cloudflare
+  @scnr.source_type:cloudflare
   BotScore < 30 and BotScore > 0
   | groupbycount(ClientIP)
   | where @q.count > 600
