--- a/rules/cloudflare_multiple_errors.yml
+++ b/rules/cloudflare_multiple_errors.yml
@@ -6,7 +6,7 @@ description: |-
 enabled: true
 severity: Low
 query_text: |-
-  %ingest.source_type:cloudflare
+  @scnr.source_type:cloudflare
   ClientRequestMethod:GET
   EdgeResponseStatus >= 400
   | groupbycount(ClientIP)
