--- a/rules/cloudflare_multiple_user_agents.yml
+++ b/rules/cloudflare_multiple_user_agents.yml
@@ -7,7 +7,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:cloudflare
+  @scnr.source_type:cloudflare
   ClientRequestUserAgent:*
   (not ClientRequestUserAgent:(""))
   | stats countdistinct(ClientRequestUserAgent) as n_user_agents by ClientIP
