--- a/rules/cloudflare_unexpected_post.yml
+++ b/rules/cloudflare_unexpected_post.yml
@@ -7,7 +7,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:cloudflare
+  @scnr.source_type:cloudflare
   ClientRequestMethod:(POST PUT)
   ClientRequestURI:(".jpg" ".jpeg" ".gif" ".png" ".icon" ".ico" ".xml" ".swf" ".svg" ".ppt" ".pttx" ".doc" ".docx" ".rtf" ".pdf" ".tif" ".zip" ".mov")
   | groupbycount(ClientIP)
